--- a/ApexLegendsFinal/Views/Shared/_Layout.cshtml
+++ b/ApexLegendsFinal/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Legends">Legends</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Characters">Legends</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Weapons">Weapons</a>
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Maps">Maps</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Ranked">Ranked</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Rank">Ranked</a>
                         </li>
                     </ul>
                 </div>
