--- a/ApexLegendsFinal/Views/Home/Maps.cshtml
+++ b/ApexLegendsFinal/Views/Home/Maps.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Maps
 @{
-    ViewData["Title"] = "Character Page";
+    ViewData["Title"] = "Maps Page";
 }
 <header>
     <h1 class="display-4">Apex Legends</h1>
