--- a/ApexLegendsFinal/Views/Home/about.cshtml
+++ b/ApexLegendsFinal/Views/Home/about.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Character Page";
+    ViewData["Title"] = "About Us";
 }
 <header>
     <h1 class="display-4">About Us</h1>
@@ -8,9 +8,8 @@
 <body>
     <h1>Learn more about the group</h1>
     <h5>Javhior Jalolitdinor</h5>
-    <h5>Chelesey</h5>
-    <p>Birthday:</p>
-    <p>Major:</p>
+    <p>Birthday:April 26, 2002</p>
+    <p>Major: Information Technology Software Developer</p>
     <p>Year of graduation: 2024</p>
 
     <h5>Sam Ishida</h5>
